Improve form on mobile & fix fields

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -302,5 +302,9 @@ h2 {
     ul {
         display: inline-flex;
     }
+
+    .group-form {
+        margin-top: 20px;
+    }
 }
 
